--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,42 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+    <head>
+        <meta charset="UTF-8">
+        <link href="main.css" rel="stylesheet">
+    </head>
 
-  Capture and Share the World's Moments
+<div class="background-top">
+<div class="background-bottom">
+<div class="general-container">
+  <div class="left-bar">
+    <div class=container>
+<img src = https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/starter-code/images/phones.png>  </div>
+  </div>
+  <div class="right-bar">
+<img src=https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/starter-code/images/brand.png>   
+  </div>
+  <div class =container1>
+  <h1>Capture and Share the World's Moments</h1>
+    <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong>, and <strong>fun</strong> way to share your life with friends and family.</p>
+<p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
+<p>Oh yeah, did we mention it's free?</p>
+  </div>
+    <div class = img1>
+      <img src = https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/starter-code/images/badge-iphone.png>
+  </div>
+  <div class = img2>
+    <img src = https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/starter-code/images/badge-android.png>
+  </div>
+  <div class="footer">
+    <strong>
+      About Us
+      Support
+      Blog
+      Press
+      API
+      Jobs
+      Privacy
+      Terms
+    </strong>
   &copy; 2014 Instagram
-</body>
-</html>
+</div>
